--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -34,9 +34,9 @@ spring:
     maxPoolPreparedStatementPerConnectionSize: 20
     filters: stat,wall,slf4j
     connectionProperties: druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=3000
-    # 此配置项会影响性能，只在排查的时候打开，系统运行时最好关闭。
-    removeAbandoned: true
-    removeAbandonedTimeout: 60
+#    # 此配置项会影响性能，只在排查的时候打开，系统运行时最好关闭。
+#    removeAbandoned: true
+#    removeAbandonedTimeout: 60
   jpa:
     properties.hibernate:
       dialect: org.hibernate.dialect.MySQL8Dialect
