--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -15,9 +15,9 @@ spring:
     enabled: true
     force: true
   datasource:
-    url: jdbc:mysql://db.runspeeds.com:3306/green_speed?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
-    username: root
-    password: 123456
+    url: jdbc:mysql://db.runspeeds.com:3306/green_speed?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+    username: mobplus
+    password: mobplus-mysql-pwd.!
     driverClassName: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
     initialSize: 10
