新增VPN错误日志

--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,13 @@
             <artifactId>kaptcha</artifactId>
             <version>${kaptcha.version}</version>
         </dependency>
+
+        <!-- jApiDocs -->
+        <dependency>
+            <groupId>io.github.yedaxia</groupId>
+            <artifactId>japidocs</artifactId>
+            <version>1.4.4</version>
+        </dependency>
     </dependencies>
 
     <build>
