--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <guava.version>28.0-jre</guava.version>
         <ehcache2.version>2.10.6</ehcache2.version>
         <fastjson.version>1.2.58</fastjson.version>
-        <mysql.version>8.0.16</mysql.version>
+        <mysql.version>8.0.22</mysql.version>
         <druid.version>1.1.17</druid.version>
         <shiro-spring.version>1.4.1</shiro-spring.version>
         <okhttp.version>4.0.0</okhttp.version>
@@ -159,6 +159,16 @@
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-spring</artifactId>
             <version>${shiro-spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>${okhttp.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okio</groupId>
+            <artifactId>okio</artifactId>
+            <version>${okio.version}</version>
         </dependency>
 
         <!--QueryDSL支持-->
